src/test/ui/proc-macro/issue-36935.stderr
error: proc-macro derive panicked
  --> $DIR/issue-36935.rs:6:20
   |
LL | #[derive(Identity, Panic)]
   |                    ^^^^^
   |
   = help: message: panic-derive

error: aborting due to previous error

